almost finished, need 2 more fixes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	    <div class="row row1">
 		<div class="jumbotron">
 		<h1>Dragon Fighting</h1>
-		<p>Pick a dragon to fight as, and defeat all remaining dragons. You pick the order you fight them in, choose wisely.</p>
+		<p>Pick a dragon to fight as, and defeat all remaining dragons. You pick the order you fight them in, choose wisely. Click attack to move on.</p>
 		</div> <!-- close jumbotron -->
 	    </div> <!-- clase row1 -->
 	    <div class="row row2">
-		<div class="col-sm-12" id="chooseDragon">
+		<div class="col-sm-12" class="chooseDragon">
 			<div class="col-sm-2">
 			    <div id="d1" class="dragon">
 				<h4>Attack: <span id="atkPw1" class="atk"></span></h4><h4>Counter Attack: <span id="ctrAtPw1" class="ctAt"></span></h4>
@@ -57,7 +57,7 @@
 		</div> <!-- close chooseDragon -->
 	    </div> <!-- close row 2 -->
 	    <div class="row row3">
-		<div class="col-sm-12" id="fightArena">
+		<div class="col-sm-12" class="fightArena">
 		    <div class="row subRow1">
 			<h2>Fighting Arena</h2>
 		    </div> <!-- subRow1 close -->
